[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/theme/greyTheme.tres" type="Theme" id=1]
[ext_resource path="res://Imports/EmptyDiamond.png" type="Texture" id=2]
[ext_resource path="res://UI/GameUI/equipmentMenu/equipmentItemBox.gd" type="Script" id=3]

[node name="equipmentItemBox" type="Panel"]
anchor_right = 0.166667
anchor_bottom = 0.0592593
margin_right = -35.0
margin_bottom = -2.0
rect_min_size = Vector2( 320, 64 )
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.01875
anchor_top = 0.078125
anchor_right = 0.984375
anchor_bottom = 0.953125
margin_left = -1.0
margin_top = -1.0
margin_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 292, 56 )
mouse_filter = 2
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="itemIcon" type="TextureRect" parent="HBoxContainer"]
margin_right = 56.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
mouse_filter = 2
theme = ExtResource( 1 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="itemName" type="Label" parent="HBoxContainer"]
margin_left = 60.0
margin_top = 15.0
margin_right = 183.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 25 )
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Sample Item Text"
clip_text = true

[node name="itemSlot" type="Label" parent="HBoxContainer"]
margin_left = 187.0
margin_top = 15.0
margin_right = 310.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 25 )
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Sample slot text"
clip_text = true
